--- a/notebooks/test_script_no_data.ipynb
+++ b/notebooks/test_script_no_data.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# imports\n",
     "from openeo import connect, Connection\n",
@@ -15,13 +17,13 @@
     "import xarray as xr\n",
     "\n",
     "%matplotlib inline"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "DEFAULT_FIGSIZE = (9, 6)\n",
     "\n",
@@ -47,13 +49,13 @@
     "\n",
     "out_dir = pathlib.Path(\"output\")\n",
     "out_dir.mkdir(parents=True, exist_ok=True)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Connect to VITO backend\n",
     "vito_url: str = \"https://openeo.vito.be/openeo/1.0\"\n",
@@ -65,32 +67,32 @@
     "# con: Connection = connect(vito_creo_url)\n",
     "# con.authenticate_oidc(provider_id=\"egi\")\n",
     "con: Connection = connect(incd_url).authenticate_oidc(provider_id=\"egi\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cube: DataCube = con.datacube_from_process(\"mean\", data=[2, 3, 5, 8])\n",
     "cube.execute()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "con.list_collections()\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "bbox = {\n",
     "    'west': 5.017099,\n",
@@ -114,53 +116,51 @@
     "\n",
     "s2.graph\n",
     "    "
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import rasterio\n",
     "\n",
     "dataset: rasterio.DatasetReader = rasterio.open(out_dir / \"s2.tiff\")\n",
     "plt.imshow(dataset.read(1))\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "308f0e6c08d7a2e18fdd0dc9d195c5dd386da1d83ed1220cd08f0a2e89ee0788"
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.7.10",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.10 64-bit ('c_scale_aqua': conda)"
-  },
-  "interpreter": {
-   "hash": "308f0e6c08d7a2e18fdd0dc9d195c5dd386da1d83ed1220cd08f0a2e89ee0788"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
