--- a/notebooks/job_management.ipynb
+++ b/notebooks/job_management.ipynb
@@ -506,7 +506,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.11 64-bit ('use-case-aquamonitor': pyenv)",
    "language": "python",
    "name": "python3"
   },
@@ -520,7 +520,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.11"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b5db018f99eddd09c2389e2817a7ada82a85c10fa5b7a1b7a82be81de946581c"
+   }
   }
  },
  "nbformat": 4,
