--- a/notebooks/test_script_no_data.ipynb
+++ b/notebooks/test_script_no_data.ipynb
@@ -152,11 +152,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "308f0e6c08d7a2e18fdd0dc9d195c5dd386da1d83ed1220cd08f0a2e89ee0788"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.11 64-bit ('use-case-aquamonitor': pyenv)",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +167,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.11"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b5db018f99eddd09c2389e2817a7ada82a85c10fa5b7a1b7a82be81de946581c"
+   }
   }
  },
  "nbformat": 4,
